<resources>
    <string name="app_name">Note Reminder</string>
    <string name="add_note">Add Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="powered_by_techasylum">Powered By TechAsylum</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="alert_content">alert_content</string>
    <string name="alert_title">title</string>

    <string name="channel_id">techasyluminfo_note_notification</string>
    <string name="channel_name">techasyluminfo_note_notification</string>
    <string name="channel_description">techasyluminfo_note_notification</string>
</resources>