<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/layout_bg"
    tools:context=".ui.AddNoteFragment">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/save_iv"
            android:textSize="18sp"
            android:scaleType="center"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="10dp"
            android:text="@string/add_note"/>
        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/save_iv"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="center"
            android:src="@drawable/ic_save_24dp"
            android:layout_toStartOf="@id/close_iv"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_note" />
        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:id="@+id/close_iv"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_close_24dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/add_note" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/title_layout"
                android:hint="@string/title">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/title_tv"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_layout"
                android:id="@+id/note_layout"
                android:layout_marginTop="16dp">
                <techasyluminfo.note.customui.LineEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:minLines="5"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:id="@+id/note_tv"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_reminder"
                android:id="@+id/reminder_controller"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_below="@+id/note_layout"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:id="@+id/reminder_layout"
                android:layout_below="@+id/reminder_controller">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/set_date_layout"
                    android:hint="@string/set_date"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_calendar_today_24dp"
                    app:startIconContentDescription="@string/set_date">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:keyboardNavigationCluster="false"
                        android:id="@+id/date_et"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/set_date_layout"
                    android:layout_marginTop="16dp"
                    android:id="@+id/set_time_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/set_time"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_watch_24dp"
                    app:startIconContentDescription="@string/set_time">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:id="@+id/time_et"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>